[package]
name = "Advent of Code 2017"
version = "0.1.0"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Solutions to the Advent of Code 2017 puzzles"

[dependencies]
nom = "3"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"
